--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     Star Wars
 
     <span class="sw-toolbar-spacer"></span>
-    <a mat-icon-button href="http://rocketloop.de/">
+    <a mat-icon-button href="http://swapi.dev/">
       <mat-icon>all_inclusive</mat-icon>
     </a>
   </mat-toolbar>
