--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,129 @@
 <div class="sw-container" [class.sw-is-mobile]="mobileQuery.matches">
+  <!-- Star Wars Header -->
   <mat-toolbar color="primary" class="sw-toolbar">
-    <a mat-icon-button [routerLink]="['']">
-      <mat-icon>home</mat-icon>
-    </a>
-    Star Wars
+    <button mat-icon-button (click)="sidenav.toggle()" class="sw-menu-btn"
+            aria-label="Toggle navigation menu">
+      <mat-icon>menu</mat-icon>
+    </button>
+
+    <div class="sw-logo-container">
+      <h1 class="sw-title sw-glow-in">STAR WARS</h1>
+      <span class="sw-subtitle">Galaxy Explorer</span>
+    </div>
 
     <span class="sw-toolbar-spacer"></span>
-    <a mat-icon-button href="http://swapi.dev/">
-      <mat-icon>all_inclusive</mat-icon>
+
+    <a mat-icon-button href="http://localhost:8080/" target="_blank"
+       class="sw-api-link" aria-label="Visit API">
+      <mat-icon>api</mat-icon>
+    </a>
+
+    <a mat-icon-button href="https://github.com/DimaJoyti/ngrx-starwars" target="_blank"
+       class="sw-github-link" aria-label="View source code">
+      <mat-icon>code</mat-icon>
     </a>
   </mat-toolbar>
 
+  <!-- Main Content Area -->
   <mat-sidenav-container class="sw-sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
+    <!-- Navigation Sidebar -->
+    <mat-sidenav #sidenav [mode]="mobileQuery.matches ? 'over' : 'side'"
+                 [fixedInViewport]="mobileQuery.matches"
+                 [opened]="!mobileQuery.matches"
+                 class="sw-sidenav">
+      <mat-nav-list class="sw-nav-list">
+        <h3 mat-subheader class="sw-nav-header">
+          <mat-icon>explore</mat-icon>
+          Explore Galaxy
+        </h3>
+
+        <a mat-list-item [routerLink]="['/']" routerLinkActive="active"
+           [routerLinkActiveOptions]="{exact: true}"
+           (click)="mobileQuery.matches && sidenav.close()">
+          <mat-icon matListItemIcon>home</mat-icon>
+          <span matListItemTitle>Home</span>
+          <span matListItemLine>Galaxy overview</span>
+        </a>
+
+        <a mat-list-item [routerLink]="['/characters']" routerLinkActive="active"
+           (click)="mobileQuery.matches && sidenav.close()">
+          <mat-icon matListItemIcon>people</mat-icon>
+          <span matListItemTitle>Characters</span>
+          <span matListItemLine>Heroes, villains & more</span>
+        </a>
+
+        <a mat-list-item [routerLink]="['/planets']" routerLinkActive="active"
+           (click)="mobileQuery.matches && sidenav.close()">
+          <mat-icon matListItemIcon>public</mat-icon>
+          <span matListItemTitle>Planets</span>
+          <span matListItemLine>Worlds across the galaxy</span>
+        </a>
+
+        <a mat-list-item [routerLink]="['/organizations']" routerLinkActive="active"
+           (click)="mobileQuery.matches && sidenav.close()">
+          <mat-icon matListItemIcon>groups</mat-icon>
+          <span matListItemTitle>Organizations</span>
+          <span matListItemLine>Jedi, Sith, Empire & more</span>
+        </a>
+
+        <a mat-list-item [routerLink]="['/weapons']" routerLinkActive="active"
+           (click)="mobileQuery.matches && sidenav.close()">
+          <mat-icon matListItemIcon>flash_on</mat-icon>
+          <span matListItemTitle>Weapons</span>
+          <span matListItemLine>Lightsabers & superweapons</span>
+        </a>
+
+        <a mat-list-item [routerLink]="['/starships']" routerLinkActive="active"
+           (click)="mobileQuery.matches && sidenav.close()">
+          <mat-icon matListItemIcon>rocket_launch</mat-icon>
+          <span matListItemTitle>Starships</span>
+          <span matListItemLine>X-wings, Star Destroyers & more</span>
+        </a>
+
+        <mat-divider></mat-divider>
+
+        <h3 mat-subheader class="sw-nav-header">
+          <mat-icon>info</mat-icon>
+          Information
+        </h3>
+
+        <a mat-list-item href="http://localhost:8080/" target="_blank">
+          <mat-icon matListItemIcon>api</mat-icon>
+          <span matListItemTitle>API Documentation</span>
+          <span matListItemLine>View API endpoints</span>
+        </a>
+
+        <a mat-list-item href="https://github.com/DimaJoyti/ngrx-starwars" target="_blank">
+          <mat-icon matListItemIcon>code</mat-icon>
+          <span matListItemTitle>Source Code</span>
+          <span matListItemLine>View on GitHub</span>
+        </a>
+      </mat-nav-list>
+    </mat-sidenav>
+
     <mat-sidenav-content>
-      <main [@smooth]="getState(o)">
+      <main [@smooth]="getState(o)" class="sw-main-content">
         <router-outlet #o="outlet"></router-outlet>
       </main>
+
+      <!-- Star Wars Footer -->
+      <footer class="sw-footer">
+        <div class="sw-footer-content">
+          <p class="sw-footer-text">
+            Built with ❤️ using Angular {{ angularVersion }} & NgRx
+          </p>
+          <p class="sw-footer-credits">
+            Enhanced Star Wars API with 30+ characters, 9 films, planets, organizations & weapons
+          </p>
+          <p class="sw-footer-stats">
+            <mat-icon>people</mat-icon> 30+ Characters |
+            <mat-icon>public</mat-icon> 10+ Planets |
+            <mat-icon>groups</mat-icon> 5+ Organizations |
+            <mat-icon>flash_on</mat-icon> 5+ Weapons |
+            <mat-icon>rocket_launch</mat-icon> 10+ Starships
+          </p>
+        </div>
+      </footer>
     </mat-sidenav-content>
   </mat-sidenav-container>
 </div>
