--- a/src/app/characters/character-details/character-details.component.html
+++ b/src/app/characters/character-details/character-details.component.html
@@ -9,7 +9,7 @@
         <a mat-icon-button [routerLink]="['']">
           <mat-icon>arrow_back</mat-icon>
         </a>
-        {{character?.name}}
+        {{character.name}}
       </h1>
       <h2>Species</h2>
       <mat-accordion>
